# freeitw2024

./: Cargo.toml  Readme.md  clippy.toml
client/: hello.sh  pandas_tests.sh
client/lambdas/: delete.sh  exec.sh  get.sh  index.sh  put.sh
client/sandboxs/: index.sh
src/: api.rs  error.rs  lambda_app.rs  lib.rs  main.rs  pagination.rs  sandbox.rs
