[package]
name = "interviewfree"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = [ "trace" ] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
axum = { version = "0.7", features = ["http1", "http2", "json", "matched-path"] }
axum-extra = { version = "0.9", features = ["query", "multipart"] }
# axum-macros = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
url = { version = "2.3", features = ["serde"] }
futures = { version = "0.3" }
anyhow = { version = "1" }
thiserror = { version = "1" }
clap = { version = "4", features = ["cargo", "wrap_help"] }
const_format = { version = "0.2" }
enum_dispatch = { version = "0.3" }
log = "0.4"

# Maybe
hot-lib-reloader = { version = "0.6.5" }
nougat = { version = "0.2" }
walkdir = { version = "2.3" }
num-traits = { version = "0.2.15" }
arrayvec = { version = "0.7.2", features = ["std", "serde"] }
bytes = { version = "1.3" }
itertools = { version = "0.10" }
