[package]
name = "interviewfree"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1" }
tower-http = { version = "0.5", features = [ "trace" ] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3.18"
axum = { version = "0.7", features = ["http1", "http2", "json", "matched-path"] }
axum-extra = { version = "0.9", features = ["async-read-body"] }
# axum-macros = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = { version = "1" }
thiserror = { version = "1" }
enum_dispatch = { version = "0.3" }
log = "0.4"
